feat(paymentsmethod): remove TiCKET and add nomad

--- a/src/domain/locales/en/translation.json
+++ b/src/domain/locales/en/translation.json
@@ -242,8 +242,7 @@
     "copyPixKey": "Copy PIX Key",
     "paymentMethod": {
       "PIX": "PIX",
-      "WISE": "Wise",
-      "TICKET": "Bank Slip",
+      "NOMAD": "Nomad",
       "SWIFT": "Swift",
       "PAYPAL": "PayPal",
       "BANK_TRANSFER": "Bank Transfer"
