feat(dataform): add lightning validate

--- a/src/domain/locales/en/translation.json
+++ b/src/domain/locales/en/translation.json
@@ -199,7 +199,11 @@
     "coldWalletError": "The wallet address cannot be empty.",
     "invalidColdWalletErrorLiquid": "Invalid Liquid wallet address.",
     "invalidColdWalletErrorOnchain": "Invalid Onchain wallet address.",
-    "invalidColdWalletErrorLightning": "Invalid Lightning wallet address.",
+    "invalidColdWalletErrorLightning": "Invalid Lightning wallet address. Use a Lightning invoice (lnbc...), a LNURL, or a Lightning email.",
+    "invalidLnurl": "Invalid LNURL. Please check the address and try again.",
+    "invalidLnurlResponse": "Invalid response from LNURL server.",
+    "fixedAmountLnurlNotSupported": "Fixed amount LNURLs are not supported. Please use a LNURL that allows custom amounts.",
+    "fixedAmountInvoiceNotSupported": "Fixed amount Lightning invoices are not supported. Please use an invoice without a specific amount.",
     "transactionNumberError": "The phone number is required.",
     "invalidTransactionNumberError": "Enter a valid phone number (9 to 15 digits).",
     "termsAndFeesAlert": "You must accept the fees, terms of use, and confirmation of the submitted data.",
