--- a/src/domain/locales/es/translation.json
+++ b/src/domain/locales/es/translation.json
@@ -200,7 +200,11 @@
     "coldWalletError": "La dirección de la billetera no puede estar vacía.",
     "invalidColdWalletErrorLiquid": "Dirección de billetera Liquid inválida.",
     "invalidColdWalletErrorOnchain": "Dirección de billetera Onchain inválida.",
-    "invalidColdWalletErrorLightning": "Dirección de billetera Lightning inválida.",
+    "invalidColdWalletErrorLightning": "Dirección de billetera Lightning inválida. Use una factura Lightning (lnbc...), un LNURL o un correo electrónico Lightning.",
+    "invalidLnurl": "LNURL inválido. Por favor, verifique la dirección e intente nuevamente.",
+    "invalidLnurlResponse": "Respuesta inválida del servidor LNURL.",
+    "fixedAmountLnurlNotSupported": "Los LNURL con monto fijo no son compatibles. Por favor, use un LNURL que permita montos personalizados.",
+    "fixedAmountInvoiceNotSupported": "Las facturas Lightning con monto fijo no son compatibles. Por favor, use una factura sin un monto específico.",
     "transactionNumberError": "El número de teléfono es obligatorio.",
     "invalidTransactionNumberError": "Ingrese un número de teléfono válido (9 a 15 dígitos).",
     "termsAndFeesAlert": "Debe aceptar las tarifas, los términos de uso y la confirmación de los datos enviados.",
