--- a/src/domain/locales/pt/translation.json
+++ b/src/domain/locales/pt/translation.json
@@ -199,7 +199,11 @@
     "coldWalletError": "O endereço da carteira não pode estar vazio.",
     "invalidColdWalletErrorLiquid": "Endereço da carteira Liquid inválido.",
     "invalidColdWalletErrorOnchain": "Endereço da carteira Onchain inválido.",
-    "invalidColdWalletErrorLightning": "Endereço da carteira Lightning inválido.",
+    "invalidColdWalletErrorLightning": "Endereço da carteira Lightning inválido. Use uma fatura Lightning (lnbc...), um LNURL ou um e-mail Lightning.",
+    "invalidLnurl": "LNURL inválido. Verifique o endereço e tente novamente.",
+    "invalidLnurlResponse": "Resposta inválida do servidor LNURL.",
+    "fixedAmountLnurlNotSupported": "LNURLs com valor fixo não são suportados. Use um LNURL que permita valores personalizados.",
+    "fixedAmountInvoiceNotSupported": "Faturas Lightning com valor fixo não são suportadas. Use uma fatura sem valor específico.",
     "transactionNumberError": "O número de telefone é obrigatório.",
     "invalidTransactionNumberError": "Insira um número de telefone válido (9 a 15 dígitos).",
     "termsAndFeesAlert": "Você precisa aceitar as taxas, termos de uso e a confirmação dos dados enviados",
