--- a/src/domain/locales/en/translation.json
+++ b/src/domain/locales/en/translation.json
@@ -197,21 +197,25 @@
   },
   "buycheckout": {
     "coldWalletError": "The wallet address cannot be empty.",
-    "invalidColdWalletErrorLiquid": "Invalid Liquid wallet address.",
-    "invalidColdWalletErrorOnchain": "Invalid Onchain wallet address.",
-    "invalidColdWalletErrorLightning": "Invalid Lightning wallet address. Use a Lightning invoice (lnbc...), a LNURL, or a Lightning email.",
+    "invalidColdWalletErrorLiquid": "Invalid Liquid wallet address. Please verify the address is correct and try again.",
+    "invalidColdWalletErrorOnchain": "Invalid Onchain wallet address. Use a valid Bitcoin address (bc1... or 1... or 3...).",
+    "invalidColdWalletErrorLightning": "Invalid Lightning wallet address. Use only a LNURL or a valid Lightning email.",
     "invalidLnurl": "Invalid LNURL. Please check the address and try again.",
     "invalidLnurlResponse": "Invalid response from LNURL server.",
     "fixedAmountLnurlNotSupported": "Fixed amount LNURLs are not supported. Please use a LNURL that allows custom amounts.",
-    "fixedAmountInvoiceNotSupported": "Fixed amount Lightning invoices are not supported. Please use an invoice without a specific amount.",
+    "lightningInvoiceNotSupported": "Lightning invoices (bolt11) are no longer supported. Use only LNURL or Lightning email.",
+    "invalidEmailLightning": "Invalid Lightning email. Use a valid format like: user@example.com",
+    "networkNotAvailable": "This network is temporarily unavailable. Try another network or wait a few minutes.",
+    "walletAddressRequired": "Please enter your wallet address before continuing.",
+    "selectNetworkFirst": "Select a network before entering the wallet address.",
     "transactionNumberError": "The phone number is required.",
     "invalidTransactionNumberError": "Enter a valid phone number (9 to 15 digits).",
     "termsAndFeesAlert": "You must accept the fees, terms of use, and confirmation of the submitted data.",
-    "invalidColdWalletErrorPolygon": "Invalid wallet address for the Polygon network.",
-    "invalidColdWalletErrorTron": "Invalid wallet address for the Tron network.",
-    "invalidNetworkForUSDT": "For USDT, please select only Liquid, Polygon or Tron .",
     "networkSelectionAlert": "You must select a Bitcoin network before proceeding.",
     "paymentError": "Error processing the payment.",
+    "invalidColdWalletErrorPolygon": "Invalid wallet address for the Polygon network. Use a valid address (0x...).",
+    "invalidColdWalletErrorTron": "Invalid wallet address for the Tron network. Use a valid address (T...).",
+    "invalidNetworkForUSDT": "For USDT, please select only Liquid, Polygon or Tron.",
     "pixKeyCopied": "PIX key copied to clipboard!",
     "makePayment": "Confirm Payment",
     "paymentNotConfirmed": "Payment not yet confirmed. Please try again.",
@@ -220,6 +224,7 @@
     "couponUsageLimitReached": "The coupon has reached its usage limit.",
     "couponValid": "The coupon is valid!",
     "couponCheckError": "Invalid coupon. Please contact us.",
+    "usernamePasswordSpaceError": "Username and password cannot contain spaces.",
     "value": "Amount",
     "valueCrypto": "Converted Amount",
     "selectNetwork": "Select Network",
@@ -249,12 +254,25 @@
       "NOMAD": "Nomad",
       "SWIFT": "Swift",
       "PAYPAL": "PayPal",
-      "BANK_TRANSFER": "Bank Transfer"
+      "BANK_TRANSFER": "Bank Transfer",
+      "TED": "Wire Transfer",
+      "CASH": "Cash Deposit"
+    },
+    "paymentLevelRestriction": {
+      "ted": "Wire Transfer available only for Silver level (2) or higher",
+      "cash": "Cash deposit available only for Gold level (3) or higher",
+      "general": "This payment method is not available for your current level"
     },
     "contactTooltip": {
-      "message": "We request your number to contact you in case something goes wrong during the transaction, ensuring greater security for your purchase.",
+      "message": "For security, it is necessary to log in with your username and password so you can access the platform on any device and unlock future purchases with higher amounts.",
       "alternative": "If you don't want to provide your real number, you can enter a fictitious one, like 1111111111."
-    }
+    },
+    "loginTooltip": {
+      "message": "For security, it is necessary to log in with your username and password so you can access the platform on any device and unlock future purchases with higher amounts. Do not use spaces in username or password.",
+      "alternative": "Your credentials will only be used for authentication."
+    },
+    "usernamePlaceholder": "Username (no spaces)",
+    "passwordPlaceholder": "Password (no spaces)"
   },
   "confirm_infos": {
     "title": "Confirm Information",
