--- a/src/domain/locales/es/translation.json
+++ b/src/domain/locales/es/translation.json
@@ -43,7 +43,7 @@
     "sell": "Vender",
     "proceed_button": "Proceder",
     "transaction_error": "Las transacciones solo están permitidas todos los días, de 8:00 AM a 10:00 PM, hora de Brasilia.",
-    "min_value_error": "El monto mínimo para comprar BTC es de 200 BRL.",
+    "min_value_error": "El valor mínimo para las transacciones de Bitcoin es de R$25,00 en la red Lightning y R$200,00 en otras redes.",
     "min_value_error_usdt": "El monto mínimo para comprar USDT es de 550 BRL.",
     "wallet_error_below_700": "Para montos inferiores a 700 BRL, solo se permiten billeteras Liquid y Lightning.",
     "payment_error_above_5000": "Para pagos con Pix superiores a 5.000 BRL, comuníquese con nuestro soporte vía WhatsApp.",
