feat(QRCodeScanner): adicionar mensagens de sucesso e instruções para leitura de QR Code

--- a/src/domain/locales/en/translation.json
+++ b/src/domain/locales/en/translation.json
@@ -247,7 +247,9 @@
     "timeRemaining": "Time remaining",
     "minutes": "minutes",
     "verifying": "Verifying...",
-    "scanQRCode": "Scan the QR Code",
+    "scanQrCode": "Scan the QR Code",
+    "qrCodeSuccess": "QR Code successfully read!",
+    "qrCodeInstructions": "Position the QR Code of your wallet address in the center of the camera to scan it automatically.",
     "qrCode100kAlt": "QR Code for $100,000",
     "bitcoinPurchaseWarning": "Attention: You are purchasing",
     "alfredLogoAlt": "Alfred Logo",
