--- a/src/domain/locales/es/translation.json
+++ b/src/domain/locales/es/translation.json
@@ -248,7 +248,9 @@
     "timeRemaining": "Tiempo restante",
     "minutes": "minutos",
     "verifying": "Verificando...",
-    "scanQRCode": "Escanee el Código QR",
+    "scanQrCode": "Escanee el Código QR",
+    "qrCodeSuccess": "¡Código QR leído con éxito!",
+    "qrCodeInstructions": "Posicione el código QR de su dirección de billetera en el centro de la cámara para escanearlo automáticamente.",
     "qrCode100kAlt": "Código QR para 100.000 R$",
     "bitcoinPurchaseWarning": "Atención: Está comprando",
     "alfredLogoAlt": "Logo de Alfred",
