--- a/src/domain/locales/pt/translation.json
+++ b/src/domain/locales/pt/translation.json
@@ -247,7 +247,9 @@
     "timeRemaining": "Tempo restante",
     "minutes": "minutos",
     "verifying": "Verificando...",
-    "scanQRCode": "Escaneie o QR Code",
+    "scanQrCode": "Escaneie o QR Code",
+    "qrCodeSuccess": "QR Code lido com sucesso!",
+    "qrCodeInstructions": "Posicione o QR Code do seu endereço de carteira no centro da câmera para escaneá-lo automaticamente.",
     "qrCode100kAlt": "QR Code para R$ 100.000",
     "bitcoinPurchaseWarning": "Atenção: Você está comprando",
     "alfredLogoAlt": "Logo Alfred",
