Feat/addqr code (#287)
* refactor(AuthContext): remove unnecessary comments and improve code clarity

* refactor(AuthContext, useDataForm): remove unnecessary comments and improve code clarity

* refactor(RemoteDataSource, useDataForm): remove console logs for cleaner code

* refactor(useDataForm): remove console log and add condition for WhatsApp redirection

* feat(TermsOfUse): add transaction limits policy section and update KYC policies section

* feat: add boleto payment method and update user level restrictions

* refactor(AuthContext, useDataForm): remove console logs and improve user feedback on login and registration

* refactor: renomear 'BOLETO' para 'TICKET' em métodos de pagamento

* feat: adicionar scanner de QR Code e integrar ao formulário de checkout

* feat(QRCodeScanner): adicionar mensagens de sucesso e instruções para leitura de QR Code

* feat(QRCodeScanner): adicionar mensagens de erro e instruções para leitura de QR Code

* feat(QRCodeScanner): ajustar configurações do scanner e melhorar layout do container

* refactor(QRCodeScanner): remover logs de console e simplificar tratamento de erros

--- a/src/domain/locales/pt/translation.json
+++ b/src/domain/locales/pt/translation.json
@@ -247,7 +247,11 @@
     "timeRemaining": "Tempo restante",
     "minutes": "minutos",
     "verifying": "Verificando...",
-    "scanQRCode": "Escaneie o QR Code",
+    "scanQrCode": "Escaneie o QR Code",
+    "qrCodeSuccess": "QR Code lido com sucesso!",
+    "qrCodeError": "Erro ao ler QR Code. Tente novamente.",
+    "qrCodeNotFound": "Nenhum QR Code detectado. Certifique-se de que o código está visível e bem iluminado.",
+    "qrCodeInstructions": "Posicione o QR Code do seu endereço de carteira no centro da câmera para escaneá-lo automaticamente.",
     "qrCode100kAlt": "QR Code para R$ 100.000",
     "bitcoinPurchaseWarning": "Atenção: Você está comprando",
     "alfredLogoAlt": "Logo Alfred",
