--- a/src/domain/locales/en/translation.json
+++ b/src/domain/locales/en/translation.json
@@ -247,7 +247,11 @@
     "timeRemaining": "Time remaining",
     "minutes": "minutes",
     "verifying": "Verifying...",
-    "scanQRCode": "Scan the QR Code",
+    "scanQrCode": "Scan the QR Code",
+    "qrCodeSuccess": "QR Code successfully read!",
+    "qrCodeError": "Error reading QR Code. Please try again.",
+    "qrCodeNotFound": "No QR Code detected. Make sure the code is visible and well-lit.",
+    "qrCodeInstructions": "Position the QR Code of your wallet address in the center of the camera to scan it automatically.",
     "qrCode100kAlt": "QR Code for $100,000",
     "bitcoinPurchaseWarning": "Attention: You are purchasing",
     "alfredLogoAlt": "Alfred Logo",
