feat(translations): adicionar dicas e correções para leitura de QR Code

--- a/src/domain/locales/en/translation.json
+++ b/src/domain/locales/en/translation.json
@@ -248,10 +248,12 @@
     "minutes": "minutes",
     "verifying": "Verifying...",
     "scanQrCode": "Scan the QR Code",
+    "scanQRCode": "Scan the QR Code",
     "qrCodeSuccess": "QR Code successfully read!",
     "qrCodeError": "Error reading QR Code. Please try again.",
     "qrCodeNotFound": "No QR Code detected. Make sure the code is visible and well-lit.",
     "qrCodeInstructions": "Position the QR Code of your wallet address in the center of the camera to scan it automatically.",
+    "qrCodeTip": "Make sure the QR Code is well-lit and stable",
     "qrCode100kAlt": "QR Code for $100,000",
     "bitcoinPurchaseWarning": "Attention: You are purchasing",
     "alfredLogoAlt": "Alfred Logo",
