--- a/src/domain/locales/es/translation.json
+++ b/src/domain/locales/es/translation.json
@@ -249,10 +249,12 @@
     "minutes": "minutos",
     "verifying": "Verificando...",
     "scanQrCode": "Escanee el Código QR",
+    "scanQRCode": "Escanee el Código QR",
     "qrCodeSuccess": "¡Código QR leído con éxito!",
     "qrCodeError": "Error al leer el código QR. Inténtelo de nuevo.",
     "qrCodeNotFound": "No se detectó ningún código QR. Asegúrese de que el código esté visible y bien iluminado.",
     "qrCodeInstructions": "Posicione el código QR de su dirección de billetera en el centro de la cámara para escanearlo automáticamente.",
+    "qrCodeTip": "Asegúrese de que el código QR esté bien iluminado y estable",
     "qrCode100kAlt": "Código QR para 100.000 R$",
     "bitcoinPurchaseWarning": "Atención: Está comprando",
     "alfredLogoAlt": "Logo de Alfred",
