--- a/src/domain/locales/pt/translation.json
+++ b/src/domain/locales/pt/translation.json
@@ -248,10 +248,12 @@
     "minutes": "minutos",
     "verifying": "Verificando...",
     "scanQrCode": "Escaneie o QR Code",
+    "scanQRCode": "Escaneie o QR Code",
     "qrCodeSuccess": "QR Code lido com sucesso!",
     "qrCodeError": "Erro ao ler QR Code. Tente novamente.",
     "qrCodeNotFound": "Nenhum QR Code detectado. Certifique-se de que o código está visível e bem iluminado.",
     "qrCodeInstructions": "Posicione o QR Code do seu endereço de carteira no centro da câmera para escaneá-lo automaticamente.",
+    "qrCodeTip": "Certifique-se de que o QR Code está bem iluminado e estável",
     "qrCode100kAlt": "QR Code para R$ 100.000",
     "bitcoinPurchaseWarning": "Atenção: Você está comprando",
     "alfredLogoAlt": "Logo Alfred",
