feat: change text of rates

--- a/src/domain/locales/en/translation.json
+++ b/src/domain/locales/en/translation.json
@@ -93,11 +93,16 @@
   },
   "fees": {
     "title": "Fees",
-    "dailyLimit1": "From 200 BRL to 5,000 BRL per day:",
-    "above1000": "4.99% for transactions up to 5,000 BRL.",
-    "below1000": "Variable rate with influencer coupon.",
-    "dailyLimit2": "From 6,001 BRL onwards:",
-    "fixedRate": "5.99% fixed fee.",
+    "dailyLimit1": "From 25 BRL up to 6,000 BRL per day:",
+    "above1000": "4.99% fee.",
+    "below1000": "Variable fee with influencer coupon.",
+    "dailyLimit2": "Above 6,000 BRL per day:",
+    "fixedRate": "5.99% fee.",
+    "paymentLimitsTitle": "Payment Limits",
+    "paymentLimits1": "Regardless of your level, you cannot make a Pix payment greater than 5,000 BRL per day.",
+    "paymentLimits2": "If you want to buy 6,000 BRL, you must make two transactions of 3,000 BRL for example, or one of 5,000 BRL and another of 1,000 BRL.",
+    "paymentLimits3": "Amounts below 200 BRL are only possible on the Lightning network, with a minimum value of 25 BRL.",
+    "paymentLimits4": "For OTC negotiations (large amounts) there is no maximum value limit.",
     "couponsTitle": "Coupon",
     "coupons": "For amounts up to 5,000 BRL, when using a coupon, the fee varies according to the influencer. For amounts above 5,000 BRL, when using a coupon, the fee is reduced to 4.99%.",
     "convertibilityRates": "Rates are variable for transactions involving Pix to LBTC and Bitcoin on-chain transfers.",
