--- a/src/domain/locales/es/translation.json
+++ b/src/domain/locales/es/translation.json
@@ -93,11 +93,16 @@
   },
   "fees": {
     "title": "Tarifas",
-    "dailyLimit1": "De 200 BRL a 5,000 BRL por día:",
-    "above1000": "4,99% para transacciones hasta 5,000 BRL.",
+    "dailyLimit1": "De 25 BRL hasta 6.000 BRL por día:",
+    "above1000": "4,99% de tarifa.",
     "below1000": "Tarifa variable con cupón de influencer.",
-    "dailyLimit2": "De 6,001 BRL en adelante:",
-    "fixedRate": "5,99% de tarifa fija.",
+    "dailyLimit2": "Por encima de 6.000 BRL por día:",
+    "fixedRate": "5,99% de tarifa.",
+    "paymentLimitsTitle": "Límites de Pago",
+    "paymentLimits1": "Independientemente del nivel, no puedes hacer un pago Pix mayor a 5.000 BRL por día.",
+    "paymentLimits2": "Si quieres comprar 6.000 BRL, debes hacer dos transacciones de 3.000 BRL por ejemplo, o una de 5.000 BRL y otra de 1.000 BRL.",
+    "paymentLimits3": "Valores inferiores a 200 BRL solo son posibles en la red Lightning, el valor mínimo es de 25 BRL.",
+    "paymentLimits4": "Para negociaciones OTC (grandes valores) no hay límite máximo de valor.",
     "couponsTitle": "Cupón",
     "coupons": "Para valores hasta 5.000 BRL, al utilizar un cupón, la tarifa varía según el influencer. Para valores superiores a 5.000 BRL, al utilizar un cupón, la tarifa se reduce a 4,99%.",
     "convertibilityRates": "Las tarifas son variables para transacciones que involucran Pix a LBTC y transferencias de Bitcoin en cadena.",
