feat: fix portuguese typos and improve text clarity

--- a/src/domain/locales/pt/translation.json
+++ b/src/domain/locales/pt/translation.json
@@ -99,10 +99,10 @@
     "dailyLimit2": "Acima de 6.000 BRL por dia:",
     "fixedRate": "5,99% de taxa.",
     "paymentLimitsTitle": "Limites de Pagamento",
-    "paymentLimits1": "Independente do nível, você não pode fazer um pix maior do que 5.000 BRL por dia.",
+    "paymentLimits1": "Independentemente do nível, você não pode fazer um pix maior do que 5.000 BRL por dia.",
     "paymentLimits2": "Se você quiser comprar 6.000 BRL, você deve fazer duas transações de 3.000 BRL por exemplo, ou uma de 5.000 BRL e outra de 1.000 BRL.",
     "paymentLimits3": "Valores abaixo de 200 BRL só são possíveis na rede Lightning, o valor mínimo é de 25 BRL.",
-    "paymentLimits4": "Para negociações de OTC (grandes valores) não ha limite máximo de valor.",
+    "paymentLimits4": "Para negociações de OTC (grandes valores) não há limite máximo de valor.",
     "couponsTitle": "Cupom",
     "coupons": "Para valores até 5.000 BRL, ao utilizar um cupom, a taxa varia de acordo com o influenciador. Para valores acima de 5.000 BRL, ao utilizar um cupom, a taxa é reduzida para 4,99%.",
     "convertibilityRates": "As taxas são variáveis para transações envolvendo Pix para LBTC e envio de Bitcoin on-chain.",
